--- a/src/java/custom_mapping.json
+++ b/src/java/custom_mapping.json
@@ -30,7 +30,8 @@
                 "<joint table name; a table that is used just for mapping>" : {
                     "type" : "<ONE_TO_MANY/MANY_TO_MANY>",
                     "from" : "<from column name>",
-                    "to" : "<to column name>"
+                    "to" : "<to column name>",
+                    "include-self" : true
                 }
             }
         },
